Fix overlapping serve detection and improve video processing pipeline
- Fixed overlapping serve detection by adding overlap prevention logic
- Added serve validation to ensure detected segments contain actual serve motion
- Improved contact moment detection with sustained position validation
- Added post-processing cleanup to remove any remaining overlaps
- Updated .gitignore to exclude data files, processed results, and media files
- Added comprehensive video processing pipeline with quality assessment
- Added serve detection with pose-based analysis
- Added example scripts for debugging and processing serves

Results: Reduced overlapping serves from 40 to 28 clean, non-overlapping segments

--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,59 @@ wheels/
 .vscode/
 .idea/
 
+# Project-specific directories
 test-runs/
+data/
+processed_serves/
+debug_analysis/
+
+# Backup files
+*_backup.py
+*.bak
+*.tmp
+
+# Log files
+*.log
+
+# Media files (videos, images)
+*.mp4
+*.avi
+*.mov
+*.mkv
+*.png
+*.jpg
+*.jpeg
+*.gif
+
+# Data files
+*.json
+*.csv
+*.xlsx
+*.xls
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# IDE and editor files
+*.swp
+*.swo
+*~
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
