feat: implement web application v2.1.0
- Add complete React frontend with TypeScript and Tailwind CSS
- Implement FastAPI backend with REST endpoints
- Add drag-and-drop video upload functionality
- Create real-time processing status updates
- Build interactive results gallery with video previews
- Add configuration panel for analysis parameters
- Implement comprehensive error handling
- Create setup scripts and documentation
- Fix Pydantic compatibility issues
- Add version documentation

This transforms the CLI tool into a user-friendly web application
with modern UI/UX design and seamless integration with the existing
serve analysis pipeline.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ dependencies = [
     "pydantic>=2.11.7",
     "rich>=14.1.0",
     "typer>=0.16.1",
+    # Web framework
+    "fastapi>=0.104.0",
+    "uvicorn[standard]>=0.24.0",
+    "python-multipart>=0.0.6",
     # Video processing
     "opencv-python>=4.8.0",
     "moviepy>=1.0.3",
